# jkpb

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  MEMORY.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.ps1  启动监控班提醒.bat  启动监控班提醒.ps1
.github/workflows/: docker-image.yml
LightAgent/: .dockerignore  .gitignore  AGENTS.md  CHANGES.md  CONTRIBUTING.md  README.md  app.py  config-template.json  config.py  pyproject.toml  requirements-optional.txt  run.sh
LightAgent/.github/: PULL_REQUEST_TEMPLATE.md
LightAgent/bridge/: agent_bridge.py  agent_event_handler.py  agent_initializer.py  bridge.py  context.py
LightAgent/channel/: channel.py  chat_channel.py
LightAgent/cli/: __init__.py  cli.py  utils.py
LightAgent/common/: cloud_client.py  i18n.py  log.py  tmp_dir.py
LightAgent/desktop/: README.md  electron-builder.js  package-lock.json  package.json
LightAgent/docker/: Dockerfile.latest  build.latest.sh  docker-compose.yml  entrypoint.sh
LightAgent/docs/: docs.json
LightAgent/scripts/: run.ps1  (+4 more)
app/: __init__.py  daily_duty_image.py  main.py  ocr.py  patrol_warning.py  patrol_warning_image.py  reminders.py  roster.py  storage.py  tunnel_mechanical_image.py  wecom.py
docker/: lightagent.Dockerfile
docs/: LightAgent-Upstream-Sync.md  LightAgent-WeChat.md  Tech-Spec.md
tests/: test_api.py  test_daily_duty_image.py  test_ocr.py  test_patrol_warning.py  test_reminders.py  test_repository_layout.py  test_roster.py  test_storage.py  test_template_parser.py  test_wechat_bridge.py  test_wecom.py
(+340 files in other folders)
